--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>SPA 任务清单</h1>
 <ul>
   <li><a href="./00-template/index.html">任务模板</a></li>
-  <!-- 参考上一行代码，后续任务链接加到这里 -->
+  <li><a href="./10-timer-button/01-button.html">定时器按钮</a></li>
 </ul>
 </body>
 </html>
