--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <ul>
   <li><a href="./00-template/index.html">任务模板</a></li>
   <li><a href="./10-timer-button/01-button.html">定时器按钮</a></li>
+  <li><a href="./11-password-visual/password.html">密码可见</a></li>
 </ul>
 </body>
 </html>
