--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <li><a href="./00-template/index.html">任务模板</a></li>
   <li><a href="./10-timer-button/01-button.html">定时器按钮</a></li>
   <li><a href="./11-password-visual/password.html">密码可见</a></li>
+  <li><a href="./43-timer-button/index.html">定时器按钮--按需加载</a></li>
 </ul>
 </body>
 </html>
