--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <li><a href="./00-template/index.html">任务模板</a></li>
   <li><a href="./10-timer-button/01-button.html">定时器按钮</a></li>
   <li><a href="./11-password-visual/password.html">密码可见</a></li>
+  <li><a href="./12-range/range.html">范围控件</a></li>
+  <li><a href="./13-progress/progress.html">进度条</a></li>
+  <li><a href="20-form-validation/form-validation.html">表单级验证</a></li>
+  <li><a href="21-h5-validation/h5-validation.html">h5校验</a></li>
   <li><a href="./43-timer-button/index.html">定时器按钮--按需加载</a></li>
 </ul>
 </body>
