--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <li><a href="./13-progress/progress.html">进度条</a></li>
   <li><a href="20-form-validation/form-validation.html">表单级验证</a></li>
   <li><a href="21-h5-validation/h5-validation.html">h5校验</a></li>
+  <li><a href="31-echart/index.html">二进熵函数</a></li>
+  <li><a href="32-map/map.html">百度地图</a></li>
+  <li><a href="33-hightlight/hightlight.html">语法高亮</a></li>
+  <li><a href="34-excel/excel.html">excel</a></li>
+  <li><a href="41-timer-button/index.html">定时器按钮</a></li>
+  <li><a href="42-password-visual/index.html">密码可见</a></li>
   <li><a href="./43-timer-button/index.html">定时器按钮--按需加载</a></li>
 </ul>
 </body>
